# Sistema-de-An-lise-de-Sentimentos-baseado-em-LLM-e-PLN

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORRECOES_CODE_REVIEW.md  Dockerfile  LICENSE  MELHORIAS_APLICADAS.md  README.md  ROADMAP.md  create_dirs.bat  deploy-to-github.ps1  docker-compose.yml  enviar-github.bat  force-push.bat  main.py  pyproject.toml  requirements.txt  sistema de analise de sentimentos.txt  start.bat
docs/: README.md
docs/assets/: README.md
src/sentiment_analysis/: __init__.py  config.py  logging_config.py
src/sentiment_analysis/api/: __init__.py  main.py
src/sentiment_analysis/api/middleware/: __init__.py  auth.py
src/sentiment_analysis/api/routes/: __init__.py  analyze.py  batch.py  history.py
src/sentiment_analysis/api/schemas/: requests.py
src/sentiment_analysis/collectors/: __init__.py  base_collector.py  file_collector.py
src/sentiment_analysis/dashboard/: __init__.py  app.py
src/sentiment_analysis/database/: __init__.py  connection.py  models.py
src/sentiment_analysis/preprocessors/: __init__.py  normalizer.py  text_cleaner.py  tokenizer.py
src/sentiment_analysis/utils/: __init__.py  cache.py
tests/: __init__.py
tests/api/: test_api.py
tests/collectors/: .gitkeep
tests/preprocessors/: test_preprocessors.py
