[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-analise-sentimentos-pln"
version = "0.1.0"
description = "Sistema de Análise de Sentimentos baseado em LLM e PLN"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Seu Nome", email = "seu.email@example.com"}
]
keywords = [
    "nlp",
    "pln",
    "sentiment-analysis",
    "llm",
    "bert",
    "portuguese",
    "fastapi",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core NLP
    "spacy>=3.7.0",
    "nltk>=3.8.0",
    "textblob>=0.17.1",

    # Transformers e LLMs
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "accelerate>=0.24.0",
    "sentencepiece>=0.1.99",
    "protobuf>=4.25.0",

    # API
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "python-jose[cryptography]>=3.3.0",

    # Banco de dados
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.9",

    # Coleta de dados
    "requests>=2.31.0",
    "tweepy>=4.14.0",
    "google-api-python-client>=2.100.0",

    # Dashboard
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "streamlit>=1.28.0",

    # Processamento assíncrono
    "celery>=5.3.0",
    "redis>=5.0.0",

    # Utilitários
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "PyYAML>=6.0.1",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "pre-commit>=3.5.0",
]
docs = [
    "sphinx>=7.2.0",
    "sphinx-rtd-theme>=2.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
]
deploy = [
    "docker>=6.1.0",
    "gunicorn>=21.2.0",
    "prometheus-client>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/Lelolima/sistema-analise-sentimentos-llm-pln"
Documentation = "https://github.com/Lelolima/sistema-analise-sentimentos-llm-pln#readme"
Repository = "https://github.com/Lelolima/sistema-analise-sentimentos-llm-pln.git"
Issues = "https://github.com/Lelolima/sistema-analise-sentimentos-llm-pln/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP", "B", "C4", "SIM"]
ignore = ["D203", "D213"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"